CodeJB/log/err.txt
Info in <TUnixSystem::ACLiC>: creating shared library /home/smjoblan/iTHEPHY/iTHEPHY/CodeJB/./data_cc.so
Warning in cling::IncrementalParser::CheckABICompatibility():
  Possible C++ standard library mismatch, compiled with __GLIBCXX__ '20181206'
  Extraction of runtime standard library version was: '20191114'
In file included from input_line_12:9:
././data.cc:151:9: error: redefinition of 'h_Dst_pT_data'
  TH1F *h_Dst_pT_data = new TH1F("h_Dst_pT_data", ";Dst pT/MeV; Event", 180, 2000., 11000.);
        ^
././data.cc:150:9: note: previous definition is here
  TH1F *h_Dst_pT_data = new TH1F("h_Dst_pT_data", ";Dst pT/MeV; Event", 180, 2000., 11000.);
        ^
Error in <ACLiC>: Dictionary generation failed!
